[package]
name = "blaustein-led"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
panic-probe = { version = "1.0.0" }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.1.0"