[package]
name = "blaustein-led"
version = "0.0.1"
authors = ["Lucas Greuloch (greluc) <lucas.greuloch@pm.me>"]
description = "Controls the LEDs of Burg Blaustein."
keywords = ["led", "embedded"]
categories = ["embedded"]
homepage = "https://github.com/greluc/blaustein-led"
repository = "https://github.com/greluc/blaustein-led"
license = "MIT"
readme = "README.md"
edition = "2024"
#exclude = [
#    ".gitlab/*",
#    "config/*",
#    "data/*",
#    "res/*",
#    ".gitlab-ci.yml",
#]

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
panic-probe = { version = "1.0.0" }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.8.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"

[[bin]]
name = "blaustein-led"
path = "src/main.rs"
test = false
bench = false
doctest = false

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
strip = "symbols"