[package]
name = "blaustein-led"
version = "0.0.1"
authors = ["Lucas Greuloch (greluc) <lucas.greuloch@pm.me>"]
description = "Controls the LEDs of Burg Blaustein."
keywords = ["led", "embedded"]
categories = ["embedded"]
homepage = "https://github.com/greluc/blaustein-led"
repository = "https://github.com/greluc/blaustein-led"
license = "MIT"
readme = "README.md"
edition = "2024"
#exclude = [
#    ".gitlab/*",
#    "config/*",
#    "data/*",
#    "res/*",
#    ".gitlab-ci.yml",
#]

[features]
# Default build contains no defmt stack to minimize size and overhead.
default = []
# Enable this feature to include defmt logging and RTT transport, and to turn on
# defmt features in Embassy crates. Useful for development/debug builds.
debug = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-executor/defmt",
    "embassy-rp/defmt",
    "panic-probe/print-defmt",
]

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
panic-probe = { version = "1.0.0" }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }

[[bin]]
name = "blaustein-led"
path = "src/main.rs"
test = false
bench = false
doctest = false

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1
strip = "symbols"